Fixed buttons view for the pages, added counting of the posts created per logged user.Update and Delete buttons are visible now.

--- a/UKT3G1/UKT3G1/static/content/bootstrap.css
+++ b/UKT3G1/UKT3G1/static/content/bootstrap.css
@@ -4742,21 +4742,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
-.pagination-page-info {
-    padding: .6em;
-    padding-left: 0;
-    width: 40em;
-    margin: .5em;
-    margin-left: 0;
-    font-size: 12px;
-}
-.pagination-page-info b {
-    color: black;
-    background: #6aa6ed;
-    padding-left: 2px;
-    padding: .1em .25em;
-    font-size: 150%;
-}
+
 .pager {
   padding-left: 0;
   margin: 20px 0;
